--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -190,7 +190,7 @@
             
               {% elsif variant.option1 == '2 x 3 Window Mesh Poster' %}
             	{% if variant.option2 == blank or variant.option2 == 'Default' %}
-                  {% assign store_banner = true %}
+                  {% assign 2x3_window_mesh = true %}
                   <p>2 x 3 Window Mesh Posters under Paint the Town are printed on view-through window mesh and are the only available option for pricing on windows.</p>
 				{% endif %}
             
